--- a/views/User-dashboard.html
+++ b/views/User-dashboard.html
@@ -1,13 +1,33 @@
 <html>
     <head>
         <title> User DashBoard</title>
+        <link rel = "stylesheet" href="stylesheet.css"/>
     </head>
     <body>
-        <header>
-            <img src = "https://feedgroupindia.com/images/logo.png" height="7.5%" width="7.5%">
-        </header>
-        <footer>
+       
+<header >
+    <div class = "logo" style = "float: left;">
+       <p> <a href = "https://feedgroupindia.com">
+        <img src = "https://feedgroupindia.com/images/logo.png" height = 55px>
+        </a></p>
+        <h3 style="float: none;">Feed Group India</h3>
+    </div>
+    
+    <div class = "logout" style = "float:right;">
+        <p><a href = "https://feedgroupindia.com/panel/login/login.php">
+        <img src = "https://upload.wikimedia.org/wikipedia/commons/thumb/archive/8/8a/20180609204932%21OOjs_UI_icon_logOut-ltr.svg/120px-OOjs_UI_icon_logOut-ltr.svg.png" height= 45px>
+    </a></p>
+    </div>
+</header>
 
-        </footer>
+<div class="content">
+    <div class="one"><h1> My Cards</h1></div>
+    
+</div>
+
+
+
+
+    <footer></footer>
     </body>
 </html>
