completed form, css and javascript to be completed

--- a/views/card-form.html
+++ b/views/card-form.html
@@ -22,7 +22,7 @@
 </header>
 
 <div class="content">
-    <!-- <label for = "firstimg"></label>    
+    <!-- </label>    
      -->
 <form >
     <div class = "company-details" style="float: left;"> 
@@ -36,26 +36,15 @@
     <div class = "personal-details" style="float: right;"> 
         <h2>Personal Details</h3>
         Name : <input type="text" name="name"><br>
-        Mobile No. : <input type="text" name="mobile-no"><br>
-        Whatsapp No. : <input type="text" name="whatapp-no"><br>
+        Mobile No. : <input type="tel" name="mobile-no"><br>
+        Whatsapp No. : <input type="tel" name="whatapp-no"><br>
     </div>
     
-    <br>    
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
+    <br><br><br><br><br><br><br><br><br><br>
 
     <div class = "company-images" style="float: left;"> 
-        <img src = "https://static.thenounproject.com/png/187803-200.png" height = 80px alt="add image" style="cursor: pointer;">
-        <input type="file"  name="firstimg"  style="display: none; visibility:none"; onchange="getImage(this.value)" >
-        <img src = "https://static.thenounproject.com/png/187803-200.png" height = 80px alt="add image" style="cursor: pointer;">
-        <input type="file"  name="secondimg"  style="display: none; visibility:none"; onchange="getImage(this.value)" >
+        Cover Image  : <input type="file" name="cover-image">
+        Logo : <input type="file" name="Logo">
     </div>
 
     <br>
@@ -72,13 +61,7 @@
     </div>
     
 
-    <br>    
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
+    <br><br><br><br><br><br><br>
         
     <div class = "About-company" style="float: left;">
         <h2>About Company</h3>
@@ -89,37 +72,56 @@
     
     <div class = "Youtube-links" style="float: right;">
         <h2>Youtube Links</h3>
+            video title :<input type="text" name ="yt-title"><br>
+           link : <input type="url" name = "yt-link">
     </div>
     
-    <br>
-    <br>    
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
+    <br><br><br><br><br><br><br><br>
     
     <div class = "upi-info" style="float: left;">
         <h2>UPI Info</h3>
+            UPI Id : <input type="text" name="upi-id"><br>
+            UPI No. : <input type="tel" name="upi-no"><br>
+            QR code : <input type="file" name="qr-code">
+
     </div>
     
     <br>
     
     <div class = "bankaccount-details" style="float: right;">
         <h2>Bank Account Details</h3>
+            Name : <input type="text" name="upi-id"><br>
+            Account No. : <input type="number" name="upi-id"><br>
+            IFSC Code : <input type="text" name="upi-id"><br>
+            Bank Name : <input type="text" name="upi-id"><br>
     </div>
     
-    <br>
-    
+    <br><br><br><br><br><br><br><br>
+
     <div class = "images">
-        <h2>images</h3>
+        <h2>Images</h3>
+        Caption : <input type="text" Name ="caption1">
+        image : <input type="file" name="image1">     <br>         
+        Caption : <input type="text" Name ="caption2">
+        image : <input type="file" name="image2">     <br>
+        Caption : <input type="text" Name ="caption3">
+        image : <input type="file" name="image3">    <br>
+        Caption : <input type="text" Name ="caption4">
+        image : <input type="file" name="image4">     <br>
+        Caption : <input type="text" Name ="caption5">
+        image : <input type="file" name="image5">     
     </div>
-</form>
+
+    <div class="buttons" style="float:right">
+
+        <button name="previous">Previous</button>
+        
+        <input type="submit" name ="submit">
+        <input type="reset" name ="reset">
+    </div>
+
 </div>
 
-
-</script>
 
 
     <footer></footer>
