created button and styled it in dashboard

--- a/views/User-dashboard.html
+++ b/views/User-dashboard.html
@@ -20,11 +20,24 @@
     </div>
 </header>
 
-<div class="content">
-    <div class="one"><h1> My Cards</h1></div>
+<div class="container">
+    <h1> My Cards</h1>
+    <br> <br> <br>
+    <div class="card-liststyled__AddCardTile-app__sc-1u8hnf8-0 bQneHs">
+        <a href="choose-temp.html">
+
+            <svg stroke="currentColor" stroke-width="2" stroke-linecap="round" aria-hidden="true" focusable="false" viewBox="0 0 28 28"   class="svg-iconstyled__Svg-app__sc-1nwmz4s-0 jZgJqI" style="fill: none; height: 1em; overflow: visible; width: 1em;">
+                <path d="M14 1.36841V26.6316"></path>
+                <path d="M1.36816 14H26.6313"></path>
+            </svg>
+            <span class="typography__Typography-app__sc-18nplck-0 card-liststyled__AddCardTitle-app__sc-1u8hnf8-1 QvJMe jREdMF mdc-typography--body1">
+                Add Card
+            </span>
+
+        </a>
+    </div>
     
 </div>
-
 
 
 
