--- a/views/stylesheet.css
+++ b/views/stylesheet.css
@@ -90,3 +90,29 @@ a, a:hover, a:focus, a:active {
   text-decoration: none;
   color: inherit;
   }
+
+
+
+  label.filebutton{
+      width:120px;
+      height:40px;
+      overflow:hidden;
+      position: relative;
+  }
+  label span input{
+      z-index: 999;
+      line-height;
+      font-size: 50px;
+      position: absolute;
+      top:-2px;
+      left :-700px;
+      opacity: 0;
+      filter: alpha(opacity = 0);
+      -ms-filter: "alpha(opacity=0";
+      cursor:pointer;
+      _cursor:hand;
+      margin:0;
+      padding:0;
+  }
+
+
