--- a/views/user/User-dashboard.html
+++ b/views/user/User-dashboard.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title> User DashBoard</title>
-        <link rel = "stylesheet" href="stylesheet.css"/>
+        <link rel = "stylesheet" href="C:\Users\Goswami\Desktop\digital-card-project\public\css\stylesheet.css"/>
     </head>
     <body>
        
@@ -14,7 +14,7 @@
     </div>
     
     <div class = "logout" style = "float:right;">
-        <p><a href = "https://feedgroupindia.com/panel/login/login.php">
+        <p><a href = "C:\Users\Goswami\Desktop\digital-card-project\views\login.html">
         <img src = "https://upload.wikimedia.org/wikipedia/commons/thumb/archive/8/8a/20180609204932%21OOjs_UI_icon_logOut-ltr.svg/120px-OOjs_UI_icon_logOut-ltr.svg.png" height= 45px>
     </a></p>
     </div>
