--- a/views/user/choose-temp.html
+++ b/views/user/choose-temp.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title> User DashBoard</title>
-        <link rel = "stylesheet" href="stylesheet.css"/>
+        <link rel = "stylesheet" href="C:\Users\Goswami\Desktop\digital-card-project\public\css\stylesheet.css"/>
     </head>
     <body>
        
