--- a/views/login.html
+++ b/views/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="C:\Users\Goswami\Desktop\digital-card-project\public\css\login.css">
     <link rel="icon" href="roll_of_paper_96px.png" type="image/ic">
     <title>Login</title>
 </head>
