--- a/views/user/card-form-1.html
+++ b/views/user/card-form-1.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title> Form </title>
-        <link rel = "stylesheet" href="stylesheet.css"/>
+        <link rel = "stylesheet" href="C:\Users\Goswami\Desktop\digital-card-project\public\css\stylesheet-form.css"/>
     </head>
     <body>
        
