--- a/public/css/stylesheet-form.css
+++ b/public/css/stylesheet-form.css
@@ -2,7 +2,7 @@
     box-sizing: border-box;
   }
   
-  html,
+  /* html,
   body,
   ul,
   ol,
@@ -17,7 +17,7 @@
   div {
     margin: 0;
     padding: 0;
-  }
+  } */
   
   body {
     font-family: "Lucida Grande";
@@ -37,7 +37,6 @@
 }
   header .logo{
       display: flex;
-      /* height: 55px; */
   }
   header .logo h3{
       margin: 19px 0px;
@@ -55,8 +54,6 @@
     
 }
  
-
-
 .bQneHs {
   align-content: center;
   background-color: transparent;
@@ -120,7 +117,6 @@ a, a:hover, a:focus, a:active {
 
   form{
     display: inline-block;
-    /* background:green; */
     border-radius: 10px;
     padding:40px 45px;
     border : 1px black;
@@ -131,3 +127,34 @@ a, a:hover, a:focus, a:active {
 form .div{
   display:inline-block;
 }
+
+html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
+  margin: 0;
+  border: 0;
+  vertical-align: baseline;
+  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -ms-box-sizing: border-box;
+}
+
+div{
+  display: block;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+block-inputs .pre-inputs {
+  margin-bottom: 20px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.container{
+  background: #fff;
+  border-radius: 10px;
+  padding:40px 45px;
+  border : 1px #B3B3B3;
+  box-shadow: 0 10px 8px rgb(0 0 0 / 10%);
+}
+
