--- a/views/login.html
+++ b/views/login.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="C:\Users\Goswami\Desktop\digital-card-project\public\css\login.css">
-    <link rel="icon" href="roll_of_paper_96px.png" type="image/ic">
+    <link rel="stylesheet" href="/public/css/login.css">
+    <link rel="icon" href="/public/images/roll_of_paper_96px.png" type="image/ic">
     <title>Login</title>
 </head>
 <body>
-    <form class="box" action="/" method="POST" id='form'>
+    <form class="box" action="/auth/login" method="POST" id='form'>
         <h1>LOGIN</h1><hr>
         <Label for="uname">User Name</Label>
         <input class="tbox" type="text" id="uname" name="uname">
